<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="16dp"
    >



    <TextView
        android:id="@+id/label_accelerometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_accelerometer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />


    <TextView
        android:id="@+id/label_gravity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_gravity"
        app:layout_constraintTop_toBottomOf="@id/label_accelerometer"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/label_gyroscope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_gyroscope"
        app:layout_constraintTop_toBottomOf="@id/label_gravity"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/label_linearAcceleration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_linearAcceleration"
        app:layout_constraintTop_toBottomOf="@id/label_gyroscope"
        app:layout_constraintLeft_toLeftOf="parent" />


    <TextView
        android:id="@+id/label_rotationVector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_rotationVector"
        app:layout_constraintTop_toBottomOf="@id/label_linearAcceleration"
        app:layout_constraintLeft_toLeftOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>

